[sphere_dialog.scp]: Added 'picinpic' docs/comments
[items/multis/multis_houses_contest.scp]: Added new houses from publish 106/107
[items/sphere_item_holiday_christmas.scp]: Added new items from publish 107
[items/sphere_item_holiday_other.scp]: Added new items from publish 105
[items/sphere_item_holiday_valentines.scp]: Added new items from publish 107
[items/sphere_item_quests.scp]: Added Jolly Roger items
[items/sphere_item_vice_virtue.scp]: Added new items from publish 107
[systems/sphere_system_treasure_maps.scp]: Fixed treasure maps sometimes getting decoded to unreachable destination

15-12-2019, Coruja
Fixed: Scripts not parsing " " quotes as string correctly.

19-12-2019, Coruja
[sphere.ini]: Removed ArriveDepartMsg, AllowNewbTransfer, CanUndressPets, NTService and TelnetLog settings
	-Region arrive/depart messages can be softcoded and don't need to be hardcoded
	-Pets now can receive newbie items and be undressed by default (this can also be softcoded and doesn't require hardcoded settings)
	-Dropped support for Windows NT service to avoid performance loss (it's not recommended run a high priority game server as a low priority background service)
	-For safety purposes now all telnet console commands are logged by default
[sphere_msgs.scp]: Removed messages 'msg_arrdep_*' and 'msg_steal'

21-12-2019, Coruja
Fixed: MulFiles setting on sphere.ini not working correctly.
Removed: Support for obsolete console auto-complete feature on Windows build (sphere.dic file).

22-12-2019, Coruja
Changed: Updated internal Libev libs v4.27 to v4.31.

02-01-2020, Coruja
Fixed: Function DUPE not duping some properties correctly.
Fixed: GM chars unable to drop items on player bankbox.

04-01-2020, Coruja
Fixed: OF_PetSlots optional flag on sphere.ini not decreasing follower slots when pet die.
Fixed: Human NPCs calling too many guards when they see an criminal/murderer.
Fixed: Guard NPCs walking too far away from the location where they got called.