@@ -1418,8 +1418,7 @@ public:
 	bool NPC_PetCheckAccess(int iCmd, CChar *pChar);
 	void NPC_PetConfirmCommand(bool fSuccess, CChar *pMaster);
 	void NPC_PetRelease();
-	void NPC_PetDesert();
-	void NPC_PetClearOwners(bool fResendTooltip = true);
+	void NPC_PetClearOwners();
 	bool NPC_PetSetOwner(CChar *pChar, bool fResendTooltip = true);
 	CChar *NPC_PetGetOwner() const;
 	bool NPC_IsOwnedBy(const CChar *pChar, bool fAllowGM = true) const;
